log
Thu 25 Apr 2024 07:55:54 PM UTC: 
 tests:  0|6
total_score: 0/70
19a2c41
Thu 25 Apr 2024 07:59:08 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
b9e23e5
Thu 25 Apr 2024 08:37:19 PM UTC: 
 hashmap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:36: error: expected ‘)’ before ‘{’ token
   62 |       if(is_equal(current->key,key){
      |         ~                          ^
      |                                    )
hashmap.c:67:5: error: expected expression before ‘}’ token
   67 |     }
      |     ^
hashmap.c:58:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |     long aux = map->current;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
7467419
